# AllDemos

./: CMakeLists.txt  README.md
executable/: CMakeLists.txt  background_subtractor_mog_ex.cpp  calc_exe_runtime.cpp  copy_file_ex.cpp  create_subfolder_directories_ex.cpp  detect_line_ex.cpp  detect_rectangle_ex.cpp  file_operator_ex.cpp  lbp_ex.cpp  linear_lighten_ex.cpp  mouse_click_get_color_ex.cpp  mouse_select_polygon_ex.cpp  parameter_ex.cpp  put_chinese_txt_ex.cpp  thresh_otsu_ex.cpp
executable/PrepareDataTrainCaffeClassification/: split_train_val_ex.cpp
include/mouseUtils/: selectRoiByMouse.h
include/myfUtils/: MatOperation.h
src/: CMakeLists.txt
src/mouseUtils/: MouseGetPoint.cpp  selectRoiByMouse.cpp
src/myfUtils/: BasicVariableOperation.cpp  Geometry.cpp  Geometry.h  LineDetector.cpp  LineDetector.h  LiveQueue.cpp  LiveQueue.h  MatOperation.cpp  Morph.cpp  RectangleDetector.cpp  RectangleDetector.h  RectangleOperation.cpp  RectangleOperation.h
src/parameterHandler/: ParameterHandler.cpp  ParameterHandler.h  parameterReader.cpp
src/putChineseText/: OpencvText.cpp  OpencvText.h
